FontCode/ANTLR4_Parser/Antlr4_Files/PythonParser.py
# Generated from Python.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonParser ( Parser ):

    grammarFileName = "Python.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'<TAB>'", "'<VAR_DECLARATION>'", "<INVALID>", 
                     "'<PRINT>'", "'<SCAN>'", "'<FUNC>'", "'<BASE_FUNC>'", 
                     "'<CONDITIONAL>'", "'</CONDITIONAL>'", "'<CONDITION>'", 
                     "'</CONDITION>'", "'<END>'", "'+'", "'-'", "'*'", "'/'", 
                     "'&&'", "'||'", "'!'", "'>'", "'<'", "'>='", "'<='", 
                     "'=='", "'!='", "'='" ]

    symbolicNames = [ "<INVALID>", "TAB", "VARIABLE_DECLARATIONS", "VARIABLE_TYPE", 
                      "PRINT", "SCAN", "FUNCTION", "MAIN_FUNCTION", "CONDITIONAL_START", 
                      "CONDITIONAL_END", "CONDITION_BRANCH_START", "CONDITION_BRANCH_END", 
                      "END_CODE", "PLUS", "MINUS", "MULT", "DIV", "AND", 
                      "OR", "NOT", "GT", "LET", "GEQ", "LEQ", "EQ", "NEQ", 
                      "ASSIGN", "ID", "NUMBER", "WS", "ANY" ]

    RULE_prog = 0
    RULE_function = 1
    RULE_expr = 2
    RULE_string = 3
    RULE_main_function = 4
    RULE_custom_function = 5
    RULE_built_function = 6
    RULE_var = 7
    RULE_var_decl = 8
    RULE_var_assign = 9
    RULE_math_op = 10
    RULE_conditional = 11
    RULE_conditional_branches = 12
    RULE_condition = 13
    RULE_conditional_branch = 14
    RULE_conditional_lines = 15
    RULE_print = 16
    RULE_scan = 17

    ruleNames =  [ "prog", "function", "expr", "string", "main_function", 
                   "custom_function", "built_function", "var", "var_decl", 
                   "var_assign", "math_op", "conditional", "conditional_branches", 
                   "condition", "conditional_branch", "conditional_lines", 
                   "print", "scan" ]

    EOF = Token.EOF
    TAB=1
    VARIABLE_DECLARATIONS=2
    VARIABLE_TYPE=3
    PRINT=4
    SCAN=5
    FUNCTION=6
    MAIN_FUNCTION=7
    CONDITIONAL_START=8
    CONDITIONAL_END=9
    CONDITION_BRANCH_START=10
    CONDITION_BRANCH_END=11
    END_CODE=12
    PLUS=13
    MINUS=14
    MULT=15
    DIV=16
    AND=17
    OR=18
    NOT=19
    GT=20
    LET=21
    GEQ=22
    LEQ=23
    EQ=24
    NEQ=25
    ASSIGN=26
    ID=27
    NUMBER=28
    WS=29
    ANY=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.FunctionContext)
            else:
                return self.getTypedRuleContext(PythonParser.FunctionContext,i)


        def var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.VarContext)
            else:
                return self.getTypedRuleContext(PythonParser.VarContext,i)


        def math_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.Math_opContext)
            else:
                return self.getTypedRuleContext(PythonParser.Math_opContext,i)


        def conditional(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ConditionalContext)
            else:
                return self.getTypedRuleContext(PythonParser.ConditionalContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PythonParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 40
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 36
                    self.function()
                    pass

                elif la_ == 2:
                    self.state = 37
                    self.var()
                    pass

                elif la_ == 3:
                    self.state = 38
                    self.math_op()
                    pass

                elif la_ == 4:
                    self.state = 39
                    self.conditional()
                    pass


                self.state = 42 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3f) == 0 and ((1 << _la) & 1543627252) != 0):
                    break

            self.state = 44
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_function

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Function_BContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def built_function(self):
            return self.getTypedRuleContext(PythonParser.Built_functionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_B" ):
                listener.enterFunction_B(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_B" ):
                listener.exitFunction_B(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_B" ):
                return visitor.visitFunction_B(self)
            else:
                return visitor.visitChildren(self)


    class Function_AContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def main_function(self):
            return self.getTypedRuleContext(PythonParser.Main_functionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_A" ):
                listener.enterFunction_A(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_A" ):
                listener.exitFunction_A(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_A" ):
                return visitor.visitFunction_A(self)
            else:
                return visitor.visitChildren(self)


    class Function_CContext(FunctionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.FunctionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def custom_function(self):
            return self.getTypedRuleContext(PythonParser.Custom_functionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_C" ):
                listener.enterFunction_C(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_C" ):
                listener.exitFunction_C(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_C" ):
                return visitor.visitFunction_C(self)
            else:
                return visitor.visitChildren(self)



    def function(self):

        localctx = PythonParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        try:
            self.state = 49
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                localctx = PythonParser.Function_AContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.main_function()
                pass
            elif token in [4, 5]:
                localctx = PythonParser.Function_BContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.built_function()
                pass
            elif token in [6]:
                localctx = PythonParser.Function_CContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.custom_function()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class StrContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def string(self):
            return self.getTypedRuleContext(PythonParser.StringContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStr" ):
                listener.enterStr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStr" ):
                listener.exitStr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStr" ):
                return visitor.visitStr(self)
            else:
                return visitor.visitChildren(self)


    class VariableContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)


    class NumberContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(PythonParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)



    def expr(self):

        localctx = PythonParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = PythonParser.VariableContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(PythonParser.ID)
                pass

            elif la_ == 2:
                localctx = PythonParser.NumberContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 52
                self.match(PythonParser.NUMBER)
                pass

            elif la_ == 3:
                localctx = PythonParser.StrContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.string()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ANY(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.ANY)
            else:
                return self.getToken(PythonParser.ANY, i)

        def getRuleIndex(self):
            return PythonParser.RULE_string

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = PythonParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_string)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 56
                    self.match(PythonParser.ANY) 
                self.state = 61
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN_FUNCTION(self):
            return self.getToken(PythonParser.MAIN_FUNCTION, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_main_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_function" ):
                listener.enterMain_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_function" ):
                listener.exitMain_function(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_function" ):
                return visitor.visitMain_function(self)
            else:
                return visitor.visitChildren(self)




    def main_function(self):

        localctx = PythonParser.Main_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_main_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(PythonParser.MAIN_FUNCTION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Custom_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(PythonParser.FUNCTION, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def getRuleIndex(self):
            return PythonParser.RULE_custom_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCustom_function" ):
                listener.enterCustom_function(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCustom_function" ):
                listener.exitCustom_function(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCustom_function" ):
                return visitor.visitCustom_function(self)
            else:
                return visitor.visitChildren(self)




    def custom_function(self):

        localctx = PythonParser.Custom_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_custom_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(PythonParser.FUNCTION)
            self.state = 65
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Built_functionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_built_function

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Built_printContext(Built_functionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Built_functionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def print_(self):
            return self.getTypedRuleContext(PythonParser.PrintContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuilt_print" ):
                listener.enterBuilt_print(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuilt_print" ):
                listener.exitBuilt_print(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBuilt_print" ):
                return visitor.visitBuilt_print(self)
            else:
                return visitor.visitChildren(self)


    class Built_scanContext(Built_functionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Built_functionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def scan(self):
            return self.getTypedRuleContext(PythonParser.ScanContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBuilt_scan" ):
                listener.enterBuilt_scan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBuilt_scan" ):
                listener.exitBuilt_scan(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBuilt_scan" ):
                return visitor.visitBuilt_scan(self)
            else:
                return visitor.visitChildren(self)



    def built_function(self):

        localctx = PythonParser.Built_functionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_built_function)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                localctx = PythonParser.Built_printContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.print_()
                pass
            elif token in [5]:
                localctx = PythonParser.Built_scanContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.scan()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_var

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Var_AContext(VarContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.VarContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_decl(self):
            return self.getTypedRuleContext(PythonParser.Var_declContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_A" ):
                listener.enterVar_A(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_A" ):
                listener.exitVar_A(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_A" ):
                return visitor.visitVar_A(self)
            else:
                return visitor.visitChildren(self)


    class Var_BContext(VarContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.VarContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def var_assign(self):
            return self.getTypedRuleContext(PythonParser.Var_assignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_B" ):
                listener.enterVar_B(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_B" ):
                listener.exitVar_B(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_B" ):
                return visitor.visitVar_B(self)
            else:
                return visitor.visitChildren(self)



    def var(self):

        localctx = PythonParser.VarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                localctx = PythonParser.Var_AContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.var_decl()
                pass
            elif token in [26, 27, 28, 30]:
                localctx = PythonParser.Var_BContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.var_assign()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE_DECLARATIONS(self):
            return self.getToken(PythonParser.VARIABLE_DECLARATIONS, 0)

        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def VARIABLE_TYPE(self):
            return self.getToken(PythonParser.VARIABLE_TYPE, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = PythonParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(PythonParser.VARIABLE_DECLARATIONS)
            self.state = 76
            self.expr()
            self.state = 77
            self.match(PythonParser.VARIABLE_TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExprContext,i)


        def ASSIGN(self):
            return self.getToken(PythonParser.ASSIGN, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_var_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_assign" ):
                listener.enterVar_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_assign" ):
                listener.exitVar_assign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_assign" ):
                return visitor.visitVar_assign(self)
            else:
                return visitor.visitChildren(self)




    def var_assign(self):

        localctx = PythonParser.Var_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_var_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.expr()
            self.state = 80
            self.match(PythonParser.ASSIGN)
            self.state = 81
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Math_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_math_op

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Math_OperationContext(Math_opContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Math_opContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExprContext,i)

        def ASSIGN(self):
            return self.getToken(PythonParser.ASSIGN, 0)
        def PLUS(self):
            return self.getToken(PythonParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(PythonParser.MINUS, 0)
        def MULT(self):
            return self.getToken(PythonParser.MULT, 0)
        def DIV(self):
            return self.getToken(PythonParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMath_Operation" ):
                listener.enterMath_Operation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMath_Operation" ):
                listener.exitMath_Operation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMath_Operation" ):
                return visitor.visitMath_Operation(self)
            else:
                return visitor.visitChildren(self)


    class Math_Operation_SimplifiedContext(Math_opContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.Math_opContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExprContext,i)

        def ASSIGN(self):
            return self.getToken(PythonParser.ASSIGN, 0)
        def PLUS(self):
            return self.getToken(PythonParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(PythonParser.MINUS, 0)
        def MULT(self):
            return self.getToken(PythonParser.MULT, 0)
        def DIV(self):
            return self.getToken(PythonParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMath_Operation_Simplified" ):
                listener.enterMath_Operation_Simplified(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMath_Operation_Simplified" ):
                listener.exitMath_Operation_Simplified(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMath_Operation_Simplified" ):
                return visitor.visitMath_Operation_Simplified(self)
            else:
                return visitor.visitChildren(self)



    def math_op(self):

        localctx = PythonParser.Math_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_math_op)
        self._la = 0 # Token type
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = PythonParser.Math_OperationContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.expr()
                self.state = 84
                self.match(PythonParser.ASSIGN)
                self.state = 85
                self.expr()
                self.state = 86
                _la = self._input.LA(1)
                if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 122880) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 87
                self.expr()
                pass

            elif la_ == 2:
                localctx = PythonParser.Math_Operation_SimplifiedContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.expr()
                self.state = 90
                _la = self._input.LA(1)
                if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 122880) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 91
                self.match(PythonParser.ASSIGN)
                self.state = 92
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONDITIONAL_START(self):
            return self.getToken(PythonParser.CONDITIONAL_START, 0)

        def condition(self):
            return self.getTypedRuleContext(PythonParser.ConditionContext,0)


        def conditional_branches(self):
            return self.getTypedRuleContext(PythonParser.Conditional_branchesContext,0)


        def CONDITIONAL_END(self):
            return self.getToken(PythonParser.CONDITIONAL_END, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditional" ):
                listener.exitConditional(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditional" ):
                return visitor.visitConditional(self)
            else:
                return visitor.visitChildren(self)




    def conditional(self):
